--- a/chroma_instance/source/main.ipynb
+++ b/chroma_instance/source/main.ipynb
@@ -1,17 +1,6 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    ""
-   ]
-  }
- ],
+ "nbformat": 4,
+ "nbformat_minor": 0,
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -29,8 +18,290 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  }
+  },
+  "colab": {
+   "name": "main.ipynb",
+   "provenance": []
+  },
+  "accelerator": "GPU"
  },
- "nbformat": 4,
- "nbformat_minor": 0
+ "cells": [
+  {
+   "cell_type": "code",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "4Zkwql37bfCJ",
+    "outputId": "fa05108c-0f9d-4a4d-fb37-1d9a1759ccbb"
+   },
+   "source": [
+    "!pwd\n",
+    "![ -d chroma-instance ] || git clone https://github.com/owen8877/chroma-instance/\n",
+    "# !cd chroma-instance/chroma_instance/source && ./download_model.sh"
+   ],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": [
+      "/content\n",
+      "./download_model.sh: line 3: pushd: ../weights/chroma_gan: No such file or directory\n",
+      "--2020-11-23 02:20:15--  http://dev.ipol.im/~lraad/chromaGAN/model/my_model_colorization.h5\n",
+      "Resolving dev.ipol.im (dev.ipol.im)... 164.73.47.251\n",
+      "Connecting to dev.ipol.im (dev.ipol.im)|164.73.47.251|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 706952656 (674M) [application/octet-stream]\n",
+      "Saving to: ‘my_model_colorization.h5.1’\n",
+      "\n",
+      "my_model_colorizati 100%[===================>] 674.20M  14.6MB/s    in 50s     \n",
+      "\n",
+      "2020-11-23 02:21:05 (13.6 MB/s) - ‘my_model_colorization.h5.1’ saved [706952656/706952656]\n",
+      "\n",
+      "./download_model.sh: line 6: popd: directory stack empty\n",
+      "Downloading...\n",
+      "/content/chroma-instance/chroma_instance/source/instcolorization /content/chroma-instance/chroma_instance/source\n",
+      "Traceback (most recent call last):\n",
+      "  File \"download.py\", line 46, in <module>\n",
+      "    download_file_from_google_drive(file_id, destination)\n",
+      "  File \"download.py\", line 19, in download_file_from_google_drive\n",
+      "    save_response_content(response, destination)\n",
+      "  File \"download.py\", line 31, in save_response_content\n",
+      "    with open(destination, \"wb\") as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '../../weights/instcolorization/checkpoints.zip'\n",
+      "/content/chroma-instance/chroma_instance/source\n",
+      "Finish download.\n",
+      "./download_model.sh: line 16: pushd: ../weights/instcolorization/: No such file or directory\n",
+      "unzip:  cannot find or open checkpoints.zip, checkpoints.zip.zip or checkpoints.zip.ZIP.\n",
+      "./download_model.sh: line 18: popd: directory stack empty\n",
+      "./download_model.sh: line 23: pushd: ../weights/mask_rcnn: No such file or directory\n",
+      "--2020-11-23 02:21:06--  https://github.com/matterport/Mask_RCNN/releases/download/v2.0/mask_rcnn_coco.h5\n",
+      "Resolving github.com (github.com)... 192.30.255.113\n",
+      "Connecting to github.com (github.com)|192.30.255.113|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://github-production-release-asset-2e65be.s3.amazonaws.com/107595270/872d3234-d21f-11e7-9a51-7b4bc8075835?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20201123%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201123T022106Z&X-Amz-Expires=300&X-Amz-Signature=0d1ccbaebdee857ba0054069927877a3d0f804887db9c3f3f6901c9871b38dd6&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=107595270&response-content-disposition=attachment%3B%20filename%3Dmask_rcnn_coco.h5&response-content-type=application%2Foctet-stream [following]\n",
+      "--2020-11-23 02:21:06--  https://github-production-release-asset-2e65be.s3.amazonaws.com/107595270/872d3234-d21f-11e7-9a51-7b4bc8075835?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20201123%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20201123T022106Z&X-Amz-Expires=300&X-Amz-Signature=0d1ccbaebdee857ba0054069927877a3d0f804887db9c3f3f6901c9871b38dd6&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=107595270&response-content-disposition=attachment%3B%20filename%3Dmask_rcnn_coco.h5&response-content-type=application%2Foctet-stream\n",
+      "Resolving github-production-release-asset-2e65be.s3.amazonaws.com (github-production-release-asset-2e65be.s3.amazonaws.com)... 52.216.85.75\n",
+      "Connecting to github-production-release-asset-2e65be.s3.amazonaws.com (github-production-release-asset-2e65be.s3.amazonaws.com)|52.216.85.75|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 257557808 (246M) [application/octet-stream]\n",
+      "Saving to: ‘mask_rcnn_coco.h5’\n",
+      "\n",
+      "mask_rcnn_coco.h5   100%[===================>] 245.63M  41.9MB/s    in 6.0s    \n",
+      "\n",
+      "2020-11-23 02:21:13 (41.0 MB/s) - ‘mask_rcnn_coco.h5’ saved [257557808/257557808]\n",
+      "\n",
+      "./download_model.sh: line 26: popd: directory stack empty\n"
+     ],
+     "name": "stdout"
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Copy the backed up weights into working directory\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "!cp '/content/drive/MyDrive/colab tmp/weights' '/content/chroma-instance/chroma_instance/' -r"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "cd chroma-instance/chroma_instance/source"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/content/chroma-instance/chroma_instance/source')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import tensorflow as tf\n",
+    "from keras import applications\n",
+    "from keras.models import load_model\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "try:\n",
+    "    %tensorflow_version 1.x\n",
+    "    from google.colab.patches import cv2_imshow\n",
+    "except:\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    cv2_imshow = plt.imshow\n",
+    "\n",
+    "from chroma_gan import ChromaGANPrint\n",
+    "\n",
+    "ChromaGANPrint.sample_images()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "hg8DDxbLdxVJ",
+    "outputId": "6a94e409-403a-4f6e-cfd9-93e904b10b05",
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    }
+   },
+   "source": [
+    "# Copy the backed up weights into working directory\n",
+    "!cp '/content/drive/MyDrive/colab tmp/weights' 'chroma-instance/chroma_instance/' -r"
+   ],
+   "execution_count": 47,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": [
+      "/content/chroma-instance/chroma_instance/source\n"
+     ],
+     "name": "stdout"
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "Oq9lmmAN2BtY"
+   },
+   "source": [
+    "import sys\n",
+    "sys.path.append('/content/chroma-instance/chroma_instance/source')"
+   ],
+   "execution_count": 55,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "D2p88TKW3UIK",
+    "outputId": "03adec06-00da-4879-c3e9-d009d5274466",
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 382
+    }
+   },
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import tensorflow as tf\n",
+    "from keras import applications\n",
+    "from keras.models import load_model\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "try:\n",
+    "    %tensorflow_version 1.x\n",
+    "    from google.colab.patches import cv2_imshow\n",
+    "except:\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    cv2_imshow = plt.imshow\n",
+    "\n",
+    "from chroma_gan import ChromaGANPrint\n",
+    "\n",
+    "ChromaGANPrint.sample_images()"
+   ],
+   "execution_count": 60,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": [
+      "TensorFlow is already loaded. Please restart the runtime to change versions.\n",
+      "/content/chroma-instance/weights/chroma_gan/imagenet.h5\n"
+     ],
+     "name": "stdout"
+    },
+    {
+     "output_type": "error",
+     "ename": "OSError",
+     "evalue": "ignored",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mOSError\u001B[0m                                   Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-60-45b2fc8210c2>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mchroma_gan\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mChromaGANPrint\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     17\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 18\u001B[0;31m \u001B[0mChromaGANPrint\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msample_images\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/content/chroma-instance/chroma_instance/source/chroma_gan/ChromaGANPrint.py\u001B[0m in \u001B[0;36msample_images\u001B[0;34m()\u001B[0m\n\u001B[1;32m     55\u001B[0m     \u001B[0msave_path\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mconfig\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mMODEL_DIR\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mconfig\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mPRETRAINED\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     56\u001B[0m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msave_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 57\u001B[0;31m     \u001B[0mcolorizationModel\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mload_model\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msave_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     58\u001B[0m     \u001B[0mtest_data\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mDATA\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mconfig\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mTEST_DIR\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     59\u001B[0m     \u001B[0;32massert\u001B[0m \u001B[0mconfig\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mBATCH_SIZE\u001B[0m \u001B[0;34m<=\u001B[0m \u001B[0mtest_data\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msize\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"The batch size should be smaller or equal to the number of testing images --> modify it in config.py\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/save.py\u001B[0m in \u001B[0;36mload_model\u001B[0;34m(filepath, custom_objects, compile, options)\u001B[0m\n\u001B[1;32m    184\u001B[0m     \u001B[0mfilepath\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpath_to_string\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilepath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    185\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0misinstance\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilepath\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0msix\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mstring_types\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 186\u001B[0;31m       \u001B[0mloader_impl\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mparse_saved_model\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilepath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    187\u001B[0m       \u001B[0;32mreturn\u001B[0m \u001B[0msaved_model_load\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mload\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfilepath\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcompile\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0moptions\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    188\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/saved_model/loader_impl.py\u001B[0m in \u001B[0;36mparse_saved_model\u001B[0;34m(export_dir)\u001B[0m\n\u001B[1;32m    111\u001B[0m                   (export_dir,\n\u001B[1;32m    112\u001B[0m                    \u001B[0mconstants\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mSAVED_MODEL_FILENAME_PBTXT\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 113\u001B[0;31m                    constants.SAVED_MODEL_FILENAME_PB))\n\u001B[0m\u001B[1;32m    114\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    115\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mOSError\u001B[0m: SavedModel file does not exist at: /content/chroma-instance/weights/chroma_gan/imagenet.h5/{saved_model.pbtxt|saved_model.pb}"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "VdTJk-5z0Xm9",
+    "outputId": "de13f41c-13cb-4fd8-b8ae-607625507014",
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    }
+   },
+   "source": [
+    "# Copy the backed up weights into working directory\n",
+    "!cp '/content/drive/MyDrive/colab tmp/weights' 'chroma-instance/chroma_instance/' -r"
+   ],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": [
+      "cp: cannot create directory 'chroma-instance/chroma_instance/weights/.ipynb_checkpoints': File exists\n"
+     ],
+     "name": "stdout"
+    }
+   ]
+  }
+ ]
 }
