Port chroma_gan to chroma_instance. Try if can train.

--- a/chroma_instance/source/chroma_instance.ipynb
+++ b/chroma_instance/source/chroma_instance.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "!pwd\n",
     "![ -d chroma-instance ] || git clone https://github.com/owen8877/chroma-instance/\n",
-    "# !cd chroma-instance/chroma_instance/source && ./download_model.sh"
+    "!cd chroma-instance/chroma_instance/source && ./download_model.sh"
    ],
    "execution_count": null,
    "outputs": [
@@ -64,7 +64,18 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "\n",
-    "!cp '/content/drive/MyDrive/colab_tmp/weights' '/content/chroma-instance/chroma_instance/' -r"
+    "![ -d '/content/chroma-instance/chroma_instance/weights' ] || mkdir '/content/chroma-instance/chroma_instance/weights'\n",
+    "# !cp '/content/drive/MyDrive/colab_tmp/weights' '/content/chroma-instance/chroma_instance/' -r\n",
+    "# !cp '/content/drive/MyDrive/colab_tmp/weights/instcolorization' '/content/chroma-instance/chroma_instance/weights/' -r\n",
+    "# !cp '/content/drive/MyDrive/colab_tmp/weights/chroma_gan' '/content/chroma-instance/chroma_instance/weights/' -r\n",
+    "# !cp '/content/drive/MyDrive/colab_tmp/weights/mask_rcnn' '/content/chroma-instance/chroma_instance/weights/' -r\n",
+    "![ -f '/content/chroma-instance/chroma_instance/dataset/train2017.zip' ] || cp '/content/drive/MyDrive/colab_tmp/dataset/train2017.zip' '/content/chroma-instance/chroma_instance/dataset/' -r\n",
+    "!if [ ! -d '/content/chroma-instance/chroma_instance/dataset/train' ]; then \\\n",
+    "    pushd '/content/drive/MyDrive/colab_tmp/dataset/'; \\\n",
+    "    unzip train2017.zip; \\\n",
+    "    mv train2017 train; \\\n",
+    "    popd; \\\n",
+    "fi"
    ],
    "execution_count": null,
    "outputs": []
@@ -108,7 +119,7 @@
     }
    },
    "source": [
-    "## Chroma GAN"
+    "## Chroma Instance"
    ]
   },
   {
@@ -120,7 +131,7 @@
     "id": "jKapAISEFUGL"
    },
    "source": [
-    "cd /content/chroma-instance/chroma_instance/source/chroma_gan"
+    "cd /content/chroma-instance/chroma_instance/source/chroma_instance"
    ],
    "execution_count": null,
    "outputs": []
@@ -134,51 +145,12 @@
     "id": "-3OfavHuFUGL"
    },
    "source": [
-    "from chroma_gan import ChromaGANPrint\n",
+    "from chroma_instance import model\n",
     "\n",
-    "ChromaGANPrint.sample_images()"
+    "model.train()"
    ],
    "execution_count": null,
    "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## MCRNN"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "cd /content/chroma-instance/chroma_instance/source/mrcnn/"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from mrcnn import test\n",
-    "\n",
-    "test.test()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   }
  ]
 }
