--- a/papers/ref.bib
+++ b/papers/ref.bib
@@ -1,3 +1,46 @@
+@article{Gulrajani2017,
+abstract = {Generative Adversarial Networks (GANs) are powerful generative models, but suffer from training instability. The recently proposed Wasserstein GAN (WGAN) makes progress toward stable training of GANs, but sometimes can still generate only poor samples or fail to converge. We find that these problems are often due to the use of weight clipping in WGAN to enforce a Lipschitz constraint on the critic, which can lead to undesired behavior. We propose an alternative to clipping weights: penalize the norm of gradient of the critic with respect to its input. Our proposed method performs better than standard WGAN and enables stable training of a wide variety of GAN architectures with almost no hyperparameter tuning, including 101-layer ResNets and language models with continuous generators. We also achieve high quality generations on CIFAR-10 and LSUN bedrooms.},
+archivePrefix = {arXiv},
+arxivId = {1704.00028},
+author = {Gulrajani, Ishaan and Ahmed, Faruk and Arjovsky, Martin and Dumoulin, Vincent and Courville, Aaron},
+eprint = {1704.00028},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/1704.00028.pdf:pdf},
+issn = {10495258},
+journal = {Advances in Neural Information Processing Systems},
+pages = {5768--5778},
+title = {{Improved training of wasserstein GANs}},
+volume = {2017-December},
+year = {2017}
+}
+@article{Iizuka2016,
+abstract = {We present a novel technique to automatically colorize grayscale images that combines both global priors and local image features. Based on Convolutional Neural Networks, our deep network features a fusion layer that allows us to elegantly merge local information dependent on small image patches with global priors computed using the entire image. The entire framework, including the global and local priors as well as the colorization model, is trained in an end-to-end fashion. Furthermore, our architecture can process images of any resolution, unlike most existing approaches based on CNN. We leverage an existing large-scale scene classification database to train our model, exploiting the class labels of the dataset to more efficiently and discriminatively learn the global priors. We validate our approach with a user study and compare against the state of the art, where we show significant improvements. Furthermore, we demonstrate our method extensively on many different types of images, including black-and-white photography from over a hundred years ago, and show realistic colorizations.},
+author = {Iizuka, Satoshi and Simo-Serra, Edgar and Ishikawa, Hiroshi},
+doi = {10.1145/2897824.2925974},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/2897824.2925974.pdf:pdf},
+isbn = {9781450342797},
+issn = {15577368},
+journal = {ACM Transactions on Graphics},
+keywords = {Colorization,Convolutional neural network},
+number = {4},
+pages = {1--11},
+title = {{Let there be color!: Joint end-to-end learning of global and local image priors for automatic image colorization with simultaneous classification}},
+volume = {35},
+year = {2016}
+}
+@article{Guadarrama2017,
+abstract = {We propose a novel approach to automatically produce multiple colorized versions of a grayscale image. Our method results from the observation that the task of automated colorization is relatively easy given a low-resolution version of the color image. We first train a conditional PixelCNN to generate a low resolution color for a given grayscale image. Then, given the generated low-resolution color image and the original grayscale image as inputs, we train a second CNN to generate a high-resolution colorization of an image. We demonstrate that our approach produces more diverse and plausible colorizations than existing methods, as judged by human raters in a "Visual Turing Test".},
+archivePrefix = {arXiv},
+arxivId = {1705.07208},
+author = {Guadarrama, Sergio and Dahl, Ryan and Bieber, David and Norouzi, Mohammad and Shlens, Jonathon and Murphy, Kevin},
+eprint = {1705.07208},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/1705.07208.pdf:pdf},
+journal = {arXiv},
+month = {may},
+pages = {1--17},
+title = {{PixColor: Pixel Recursive Colorization}},
+url = {http://arxiv.org/abs/1705.07208},
+year = {2017}
+}
 @article{Zhao2018,
 abstract = {While many image colorization algorithms have recently shown the capability of producing plausible color versions from gray-scale photographs, they still suffer from the problems of context confusion and edge color bleeding. To address context confusion, we propose to incorporate the pixel-level object semantics to guide the image colorization. The rationale is that human beings perceive and distinguish colors based on the object's semantic categories. We propose a hierarchical neural network with two branches. One branch learns what the object is while the other branch learns the object's colors. The network jointly optimizes a semantic segmentation loss and a colorization loss. To attack edge color bleeding we generate more continuous color maps with sharp edges by adopting a joint bilateral upsamping layer at inference. Our network is trained on PASCAL VOC2012 and COCO-stuff with semantic segmentation labels and it produces more realistic and finer results compared to the colorization state-of-the-art.},
 archivePrefix = {arXiv},
@@ -103,36 +146,19 @@ pages = {5800--5809},
 title = {{Reference-based sketch image colorization using augmented-self reference and dense semantic correspondence}},
 year = {2020}
 }
-@article{Cheng2015,
-abstract = {This paper investigates into the colorization problem which converts a grayscale image to a colorful version. This is a very difficult problem and normally requires manual adjustment to achieve artifact-free quality. For instance, it normally requires human-labelled color scribbles on the grayscale target image or a careful selection of colorful reference images (e.g., capturing the same scene in the grayscale target image). Unlike the previous methods, this paper aims at a high-quality fully-automatic colorization method. With the assumption of a perfect patch matching technique, the use of an extremely large-scale reference database (that contains sufficient color images) is the most reliable solution to the colorization problem. However, patch matching noise will increase with respect to the size of the reference database in practice. Inspired by the recent success in deep learning techniques which provide amazing modeling of large-scale data, this paper re-formulates the colorization problem so that deep learning techniques can be directly employed. To ensure artifact-free quality, a joint bilateral filtering based post-processing step is proposed. Numerous experiments demonstrate that our method outperforms the state-of-art algorithms both in terms of quality and speed.},
+@article{Vitoria2020,
+abstract = {The colorization of grayscale images is an ill-posed problem, with multiple correct solutions. In this paper, we propose an adversarial learning colorization approach coupled with semantic information. A generative network is used to infer the chromaticity of a given grayscale image conditioned to semantic clues. This network is framed in an adversarial model that learns to colorize by incorporating perceptual and semantic understanding of color and class distributions. The model is trained via a fully self-supervised strategy. Qualitative and quantitative results show the capacity of the proposed method to colorize images in a realistic way achieving state-of-the-art results.},
 archivePrefix = {arXiv},
-arxivId = {1605.00075},
-author = {Cheng, Zezhou and Yang, Qingxiong and Sheng, Bin},
-doi = {10.1109/ICCV.2015.55},
-eprint = {1605.00075},
-file = {:home/xdroid/Documents/CSE392 ML/project/papers/1605.00075.pdf:pdf},
-isbn = {9781467383912},
-issn = {15505499},
-journal = {Proceedings of the IEEE International Conference on Computer Vision},
-pages = {415--423},
-title = {{Deep colorization}},
-volume = {2015 International Conference on Computer Vision, ICCV 2015},
-year = {2015}
-}
-@article{Carlucci2018,
-author = {Carlucci, Fabio Maria and Russo, Paolo and Caputo, Barbara},
-doi = {10.1109/LRA.2018.2812225},
-file = {:home/xdroid/Documents/CSE392 ML/project/papers/08306886.pdf:pdf},
-issn = {2377-3766},
-journal = {IEEE Robotics and Automation Letters},
-month = {jul},
-number = {3},
-pages = {2386--2393},
-publisher = {IEEE},
-title = {{(DE)$^2$CO: Deep Depth Colorization}},
-url = {http://ieeexplore.ieee.org/document/8306886/},
-volume = {3},
-year = {2018}
+arxivId = {1907.09837},
+author = {Vitoria, Patricia and Raad, Lara and Ballester, Coloma},
+doi = {10.1109/WACV45572.2020.9093389},
+eprint = {1907.09837},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/Vitoria_ChromaGAN_Adversarial_Picture_Colorization_with_Semantic_Class_Distribution_WACV_2020_paper.pdf:pdf},
+isbn = {9781728165530},
+journal = {Proceedings - 2020 IEEE Winter Conference on Applications of Computer Vision, WACV 2020},
+pages = {2434--2443},
+title = {{ChromaGAN: Adversarial picture colorization with semantic class distribution}},
+year = {2020}
 }
 @article{Su2020,
 abstract = {Image colorization is inherently an ill-posed problem with multi-modal uncertainty. Previous methods leverage the deep neural network to map input grayscale images to plausible color outputs directly. Although these learning-based methods have shown impressive performance, they usually fail on the input images that contain multiple objects. The leading cause is that existing models perform learning and colorization on the entire image. In the absence of a clear figure-ground separation, these models cannot effectively locate and learn meaningful object-level semantics. In this paper, we propose a method for achieving instance-aware colorization. Our network architecture leverages an off-the-shelf object detector to obtain cropped object images and uses an instance colorization network to extract object-level features. We use a similar network to extract the full-image features and apply a fusion module to full object-level and image-level features to predict the final colors. Both colorization networks and fusion modules are learned from a large-scale dataset. Experimental results show that our work outperforms existing methods on different quality metrics and achieves state-of-the-art performance on image colorization.},
@@ -149,24 +175,58 @@ arxivId = {2008.10774},
 author = {Anwar, Saeed and Tahir, Muhammad and Li, Chongyi and Mian, Ajmal and Khan, Fahad Shahbaz and Muzaffar, Abdul Wahab},
 eprint = {2008.10774},
 file = {:home/xdroid/Documents/CSE392 ML/project/papers/2008.10774.pdf:pdf},
+month = {aug},
 pages = {1--19},
 title = {{Image Colorization: A Survey and Dataset}},
 url = {http://arxiv.org/abs/2008.10774},
 year = {2020}
 }
-@article{Vitoria2020,
-abstract = {The colorization of grayscale images is an ill-posed problem, with multiple correct solutions. In this paper, we propose an adversarial learning colorization approach coupled with semantic information. A generative network is used to infer the chromaticity of a given grayscale image conditioned to semantic clues. This network is framed in an adversarial model that learns to colorize by incorporating perceptual and semantic understanding of color and class distributions. The model is trained via a fully self-supervised strategy. Qualitative and quantitative results show the capacity of the proposed method to colorize images in a realistic way achieving state-of-the-art results.},
+@article{Zhang2018,
+abstract = {While it is nearly effortless for humans to quickly assess the perceptual similarity between two images, the underlying processes are thought to be quite complex. Despite this, the most widely used perceptual metrics today, such as PSNR and SSIM, are simple, shallow functions, and fail to account for many nuances of human perception. Recently, the deep learning community has found that features of the VGG network trained on ImageNet classification has been remarkably useful as a training loss for image synthesis. But how perceptual are these so-called 'perceptual losses'? What elements are critical for their success? To answer these questions, we introduce a new dataset of human perceptual similarity judgments. We systematically evaluate deep features across different architectures and tasks and compare them with classic metrics. We find that deep features outperform all previous metrics by large margins on our dataset. More surprisingly, this result is not restricted to ImageNet-trained VGG features, but holds across different deep architectures and levels of supervision (supervised, self-supervised, or even unsupervised). Our results suggest that perceptual similarity is an emergent property shared across deep visual representations.},
 archivePrefix = {arXiv},
-arxivId = {1907.09837},
-author = {Vitoria, Patricia and Raad, Lara and Ballester, Coloma},
-doi = {10.1109/WACV45572.2020.9093389},
-eprint = {1907.09837},
-file = {:home/xdroid/Documents/CSE392 ML/project/papers/Vitoria_ChromaGAN_Adversarial_Picture_Colorization_with_Semantic_Class_Distribution_WACV_2020_paper.pdf:pdf},
-isbn = {9781728165530},
-journal = {Proceedings - 2020 IEEE Winter Conference on Applications of Computer Vision, WACV 2020},
-pages = {2434--2443},
-title = {{ChromaGAN: Adversarial picture colorization with semantic class distribution}},
-year = {2020}
+arxivId = {1801.03924},
+author = {Zhang, Richard and Isola, Phillip and Efros, Alexei A. and Shechtman, Eli and Wang, Oliver},
+doi = {10.1109/CVPR.2018.00068},
+eprint = {1801.03924},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/1801.03924.pdf:pdf},
+isbn = {9781538664209},
+issn = {10636919},
+journal = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+number = {1},
+pages = {586--595},
+title = {{The Unreasonable Effectiveness of Deep Features as a Perceptual Metric}},
+year = {2018}
+}
+@article{Cheng2015,
+abstract = {This paper investigates into the colorization problem which converts a grayscale image to a colorful version. This is a very difficult problem and normally requires manual adjustment to achieve artifact-free quality. For instance, it normally requires human-labelled color scribbles on the grayscale target image or a careful selection of colorful reference images (e.g., capturing the same scene in the grayscale target image). Unlike the previous methods, this paper aims at a high-quality fully-automatic colorization method. With the assumption of a perfect patch matching technique, the use of an extremely large-scale reference database (that contains sufficient color images) is the most reliable solution to the colorization problem. However, patch matching noise will increase with respect to the size of the reference database in practice. Inspired by the recent success in deep learning techniques which provide amazing modeling of large-scale data, this paper re-formulates the colorization problem so that deep learning techniques can be directly employed. To ensure artifact-free quality, a joint bilateral filtering based post-processing step is proposed. Numerous experiments demonstrate that our method outperforms the state-of-art algorithms both in terms of quality and speed.},
+archivePrefix = {arXiv},
+arxivId = {1605.00075},
+author = {Cheng, Zezhou and Yang, Qingxiong and Sheng, Bin},
+doi = {10.1109/ICCV.2015.55},
+eprint = {1605.00075},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/1605.00075.pdf:pdf},
+isbn = {9781467383912},
+issn = {15505499},
+journal = {Proceedings of the IEEE International Conference on Computer Vision},
+pages = {415--423},
+title = {{Deep colorization}},
+volume = {2015 Inter},
+year = {2015}
+}
+@article{Carlucci2018,
+author = {Carlucci, Fabio Maria and Russo, Paolo and Caputo, Barbara},
+doi = {10.1109/LRA.2018.2812225},
+file = {:home/xdroid/Documents/CSE392 ML/project/papers/08306886.pdf:pdf},
+issn = {2377-3766},
+journal = {IEEE Robotics and Automation Letters},
+month = {jul},
+number = {3},
+pages = {2386--2393},
+publisher = {IEEE},
+title = {{(DE)$^2$CO: Deep Depth Colorization}},
+url = {http://ieeexplore.ieee.org/document/8306886/},
+volume = {3},
+year = {2018}
 }
 @article{Zhang2016,
 abstract = {Given a grayscale photograph as input, this paper attacks the problem of hallucinating a plausible color version of the photograph. This problem is clearly underconstrained, so previous approaches have either relied on significant user interaction or resulted in desaturated colorizations. We propose a fully automatic approach that produces vibrant and realistic colorizations. We embrace the underlying uncertainty of the problem by posing it as a classification task and use class-rebalancing at training time to increase the diversity of colors in the result. The system is implemented as a feed-forward pass in a CNN at test time and is trained on over a million color images. We evaluate our algorithm using a “colorization Turing test,” asking human participants to choose between a generated and ground truth color image. Our method successfully fools humans on 32% of the trials, significantly higher than previous methods. Moreover, we show that colorization can be a powerful pretext task for self-supervised feature learning, acting as a cross-channel encoder. This approach results in state-of-the-art performance on several feature learning benchmarks.},
@@ -212,33 +272,4 @@ journal = {arXiv},
 pages = {1--15},
 title = {{Probabilistic image colorization}},
 year = {2017}
-}
-@article{Guadarrama2017,
-abstract = {We propose a novel approach to automatically produce multiple colorized versions of a grayscale image. Our method results from the observation that the task of automated colorization is relatively easy given a low-resolution version of the color image. We first train a conditional PixelCNN to generate a low resolution color for a given grayscale image. Then, given the generated low-resolution color image and the original grayscale image as inputs, we train a second CNN to generate a high-resolution colorization of an image. We demonstrate that our approach produces more diverse and plausible colorizations than existing methods, as judged by human raters in a "Visual Turing Test".},
-archivePrefix = {arXiv},
-arxivId = {1705.07208},
-author = {Guadarrama, Sergio and Dahl, Ryan and Bieber, David and Norouzi, Mohammad and Shlens, Jonathon and Murphy, Kevin},
-eprint = {1705.07208},
-file = {:home/xdroid/Documents/CSE392 ML/project/papers/1705.07208.pdf:pdf},
-journal = {arXiv},
-month = {may},
-pages = {1--17},
-title = {{PixColor: Pixel Recursive Colorization}},
-url = {http://arxiv.org/abs/1705.07208},
-year = {2017}
-}
-@article{Iizuka2016,
-abstract = {We present a novel technique to automatically colorize grayscale images that combines both global priors and local image features. Based on Convolutional Neural Networks, our deep network features a fusion layer that allows us to elegantly merge local information dependent on small image patches with global priors computed using the entire image. The entire framework, including the global and local priors as well as the colorization model, is trained in an end-to-end fashion. Furthermore, our architecture can process images of any resolution, unlike most existing approaches based on CNN. We leverage an existing large-scale scene classification database to train our model, exploiting the class labels of the dataset to more efficiently and discriminatively learn the global priors. We validate our approach with a user study and compare against the state of the art, where we show significant improvements. Furthermore, we demonstrate our method extensively on many different types of images, including black-and-white photography from over a hundred years ago, and show realistic colorizations.},
-author = {Iizuka, Satoshi and Simo-Serra, Edgar and Ishikawa, Hiroshi},
-doi = {10.1145/2897824.2925974},
-file = {:home/xdroid/Documents/CSE392 ML/project/papers/2897824.2925974.pdf:pdf},
-isbn = {9781450342797},
-issn = {15577368},
-journal = {ACM Transactions on Graphics},
-keywords = {Colorization,Convolutional neural network},
-number = {4},
-pages = {1--11},
-title = {{Let there be color!: Joint end-to-end learning of global and local image priors for automatic image colorization with simultaneous classification}},
-volume = {35},
-year = {2016}
 }
